@@ -25,7 +25,12 @@ module Kramdown; module AsciiDoc
 
   def self.convert_file markdown_file, opts = {}
     markdown = ::IO.read markdown_file, mode: 'r:UTF-8', newline: :universal
-    (output_file = (::Pathname.new markdown_file).sub_ext '.adoc').dirname.mkpath
+    if (output_file = opts.delete :to)
+      output_file = ::Pathname.new output_file unless ::Pathname === output_file
+    else
+      output_file = (::Pathname.new markdown_file).sub_ext '.adoc'
+    end
+    output_file.dirname.mkpath
     convert markdown, (opts.merge to: output_file, encode: false)
   end
 end; end
