@@ -10,6 +10,7 @@ For a detailed view of what has changed, refer to the {uri-repo}/commits/master[
 === Added
 
 * encode Markdown source passed to convert API to UTF-8 with universal newlines unless :encode option is false
+* convert_file should write output to file specified by :to option, if given (#40)
 
 == 1.0.0.alpha.11 (2018-08-02) - @mojavelinux
 
